--- a/package.json
+++ b/package.json
@@ -1,24 +1,34 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next",
+    "dev": "yarn generate && next dev -p 9001",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start -p 9001",
+    "lint": "next lint",
+    "generate": "graphql-codegen"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.11",
+    "@heroicons/react": "^2.0.13",
     "@types/node": "^18.6.3",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
-    "@heroicons/react": "^2.0.13",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
+    "graphql": "^16.6.0",
+    "i18next": "^22.4.14",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.2.0",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^3.3.0",
+    "@graphql-codegen/typed-document-node": "^4.0.0",
+    "@graphql-codegen/typescript": "^3.0.3",
+    "@graphql-codegen/typescript-operations": "^3.0.3",
+    "@graphql-codegen/typescript-react-query": "^4.1.0",
     "autoprefixer": "10.4.7",
     "postcss": "8.4.14",
     "tailwindcss": "^3.0.24"
