--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.2.0",
+    "react-social-icons": "^5.15.0",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
