--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.0.6",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
+    "dayjs": "^1.11.7",
     "graphql": "^16.6.0",
     "i18next": "^22.4.14",
     "next": "latest",
