--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@graphql-codegen/typescript-react-query": "^4.1.0",
     "autoprefixer": "10.4.7",
     "postcss": "8.4.14",
+    "sass": "^1.62.0",
     "tailwindcss": "^3.0.24"
   }
 }
