--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
     "dayjs": "^1.11.7",
+    "framer-motion": "^10.12.4",
     "graphql": "^16.6.0",
     "i18next": "^22.4.14",
     "next": "latest",
