--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bm-web-nextjs",
   "private": true,
   "scripts": {
-    "dev": "yarn generate && next dev -p 9001",
+    "dev": "yarn generate && next dev -p 9000",
     "build": "next build",
     "start": "next start -p 9001",
     "lint": "next lint",
@@ -20,6 +20,7 @@
     "framer-motion": "^10.12.4",
     "graphql": "^16.6.0",
     "i18next": "^22.4.14",
+    "mapbox-gl": "^2.14.1",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -33,6 +34,7 @@
     "@graphql-codegen/typescript": "^3.0.3",
     "@graphql-codegen/typescript-operations": "^3.0.3",
     "@graphql-codegen/typescript-react-query": "^4.1.0",
+    "@types/mapbox-gl": "^2.7.11",
     "autoprefixer": "10.4.7",
     "postcss": "8.4.14",
     "sass": "^1.62.0",
