--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "dayjs": "^1.11.7",
     "framer-motion": "^10.12.4",
     "graphql": "^16.6.0",
+    "html-react-parser": "^3.0.16",
     "i18next": "^22.4.14",
     "mapbox-gl": "^2.14.1",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.2.0",
+    "react-slick": "^0.29.0",
     "react-social-icons": "^5.15.0",
     "typescript": "^4.7.4"
   },
