--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.11",
+    "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.13",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@types/node": "^18.6.3",
@@ -24,6 +25,7 @@
     "i18next": "^22.4.14",
     "mapbox-gl": "^2.14.1",
     "next": "latest",
+    "next-i18next": "^13.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.2.0",
