--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-i18next": "^12.2.0",
     "react-slick": "^0.29.0",
     "react-social-icons": "^5.15.0",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
@@ -38,6 +39,7 @@
     "@graphql-codegen/typescript-operations": "^3.0.3",
     "@graphql-codegen/typescript-react-query": "^4.1.0",
     "@types/mapbox-gl": "^2.7.11",
+    "@types/react-slick": "^0.23.10",
     "autoprefixer": "10.4.7",
     "postcss": "8.4.14",
     "sass": "^1.62.0",
