--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-i18next": "^12.2.0",
     "react-slick": "^0.29.0",
     "react-social-icons": "^5.15.0",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
