--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.2.0",
+    "react-responsive": "^9.0.2",
     "react-slick": "^0.29.0",
     "react-social-icons": "^5.15.0",
     "slick-carousel": "^1.8.1",
