--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mapbox-gl": "^2.14.1",
     "next": "latest",
     "next-i18next": "^13.2.2",
+    "nextjs-progressbar": "^0.0.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.2.0",
