--- a/package.json
+++ b/package.json
@@ -31,10 +31,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.2.0",
+    "react-icons": "^4.10.1",
+    "react-responsive": "^9.0.2",
     "react-slick": "^0.29.0",
     "react-social-icons": "^5.15.0",
     "slick-carousel": "^1.8.1",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "use-mailchimp-form": "^3.1.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^3.3.0",
