--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-share": "^4.4.1",
     "react-slick": "^0.29.0",
     "react-social-icons": "^5.15.0",
+    "sharp": "^0.32.6",
     "slick-carousel": "^1.8.1",
     "typescript": "^4.7.4",
     "use-mailchimp-form": "^3.1.0"
