--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "graphql": "^16.6.0",
     "html-react-parser": "^3.0.16",
     "i18next": "^22.4.14",
+    "jotai": "^2.5.0",
     "mapbox-gl": "^2.14.1",
     "next": "latest",
     "next-i18next": "^13.2.2",
