--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "i18next": "^22.4.14",
     "jotai": "^2.5.0",
     "mapbox-gl": "^2.14.1",
-    "next": "latest",
+    "next": "^13.5.6",
     "next-i18next": "^13.2.2",
     "nextjs-progressbar": "^0.0.16",
     "rc-collapse": "^3.7.0",
