--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "graphql": "^16.6.0",
     "html-react-parser": "^3.0.16",
     "i18next": "^22.4.14",
+    "jotai": "^2.5.0",
     "mapbox-gl": "^2.14.1",
-    "next": "latest",
+    "next": "^13.5.6",
     "next-i18next": "^13.2.2",
     "nextjs-progressbar": "^0.0.16",
     "rc-collapse": "^3.7.0",
@@ -42,6 +43,7 @@
     "react-share": "^4.4.1",
     "react-slick": "^0.29.0",
     "react-social-icons": "^5.15.0",
+    "sharp": "^0.32.6",
     "slick-carousel": "^1.8.1",
     "typescript": "^4.7.4",
     "use-mailchimp-form": "^3.1.0"
