--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@apollo/client": "^3.7.11",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.13",
+    "@next/third-parties": "^14.1.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@types/node": "^18.6.3",
     "@types/react": "^18.0.15",
@@ -26,7 +27,7 @@
     "i18next": "^22.4.14",
     "jotai": "^2.5.0",
     "mapbox-gl": "^2.14.1",
-    "next": "^13.5.6",
+    "next": "^14.1.0",
     "next-i18next": "^13.2.2",
     "nextjs-progressbar": "^0.0.16",
     "rc-collapse": "^3.7.0",
