--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "build": "next build",
     "start": "next start -p 9001",
     "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "generate": "graphql-codegen"
   },
   "dependencies": {
@@ -15,8 +17,8 @@
     "@next/third-parties": "^14.1.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@types/node": "^18.6.3",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "axios": "^1.4.0",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
@@ -55,11 +57,18 @@
     "@graphql-codegen/typescript": "^3.0.3",
     "@graphql-codegen/typescript-operations": "^3.0.3",
     "@graphql-codegen/typescript-react-query": "^4.1.0",
+    "@testing-library/dom": "^10.3.1",
+    "@testing-library/jest-dom": "^6.4.8",
+    "@testing-library/react": "^16.0.0",
+    "@types/jest": "^29.5.12",
     "@types/mapbox-gl": "^2.7.11",
     "@types/react-slick": "^0.23.10",
     "autoprefixer": "10.4.7",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "8.4.14",
     "sass": "^1.62.0",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.0.24",
+    "ts-node": "^10.9.2"
   }
 }
