--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,10 @@ next-env.d.ts
 
 # firebase
 .firebase
+
+# Playwright
+node_modules/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
