--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "scripts": {
     "dev": "yarn generate && next dev -p 9000",
     "build": "next build",
+    "e2e": "playwright test",
+    "e2e:debug": "playwright test --headed --debug",
     "start": "next start -p 9001",
     "lint": "next lint",
     "test": "jest",
@@ -57,6 +59,7 @@
     "@graphql-codegen/typescript": "^3.0.3",
     "@graphql-codegen/typescript-operations": "^3.0.3",
     "@graphql-codegen/typescript-react-query": "^4.1.0",
+    "@playwright/test": "^1.51.0",
     "@testing-library/dom": "^10.3.1",
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
