--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -20,8 +20,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18' # TODO: Update to V22
-          cache: 'npm'
-          cache-dependency-path: package-lock.json
 
       - name: Install dependencies
         run: npm install -g yarn && yarn
@@ -29,17 +27,7 @@ jobs:
       - name: Install Playwright Browsers
         run: yarn playwright install --with-deps
 
-      - name: Fetch Vercel Deployment URL
-        id: fetch-vercel-url
-        run: |
-          curl -s -H "Authorization: Bearer ${{ secrets.VERCEL_TOKEN }}" \
-          "https://api.vercel.com/v6/deployments?teamId=${{ secrets.VERCEL_TEAM_ID }}" \
-          | jq -r '.deployments[] | select(.meta.githubCommitRef == env.GITHUB_HEAD_REF) | .url' > vercel_url.txt
-          echo "VERCEL_URL=$(cat vercel_url.txt)" >> $GITHUB_ENV
-        env:
-          GITHUB_HEAD_REF: ${{ github.head_ref }}
-
       - name: Run Playwright tests
         run: yarn e2e
         env:
-          APP_URL: https://${{ env.VERCEL_URL }}
+          APP_URL: ${{ secrets.APP_URL }}
