--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -2,6 +2,7 @@ name: Playwright Tests
 on:
   push:
     branches:
+      - develop
       - staging
 
   pull_request:
@@ -34,7 +35,7 @@ jobs:
         run: npm install -g yarn && yarn
 
       - name: Install Playwright Browsers
-        run: yarn playwright install --with-deps
+        run: yarn playwright install chromium --only-shell
 
       - name: Run Playwright tests
         run: yarn e2e
