Feature/temuulen/GEN60-61 (#132)
* Add playwright workflow and some tests

* add gitignore

* try passing the pipeline err

* wait for vercel preview

* wait for vercel preview

* Setting timeout longer and adding all branches PR

* try this

* try this

* try this

* not sure how long it would build but hopeuflly 10m is enough

* remove the timeout

* download only chromium

* remove the unnecessary link output

* increase the timeout

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ yarn-error.log*
 
 # local env files
 .env*.local
+.env
 
 # vercel
 .vercel
@@ -37,3 +38,10 @@ next-env.d.ts
 
 # firebase
 .firebase
+
+# Playwright
+node_modules/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
