--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "e2e:debug": "playwright test --headed --debug",
     "start": "next start -p 9001",
     "lint": "next lint",
-    "test": "jest",
-    "test:watch": "jest --watch",
+    "test": "jest --testPathIgnorePatterns=/tests/",
+    "test:watch": "jest --watch --testPathIgnorePatterns=/tests/",
     "generate": "graphql-codegen"
   },
   "dependencies": {
@@ -67,11 +67,13 @@
     "@types/mapbox-gl": "^2.7.11",
     "@types/react-slick": "^0.23.10",
     "autoprefixer": "10.4.7",
+    "axios-mock-adapter": "^2.1.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.5.6",
     "sass": "^1.62.0",
     "tailwindcss": "^3.0.24",
     "ts-node": "^10.9.2"
-  }
+  },
+  "packageManager": "yarn@4.9.1+sha512.f95ce356460e05be48d66401c1ae64ef84d163dd689964962c6888a9810865e39097a5e9de748876c2e0bf89b232d583c33982773e9903ae7a76257270986538"
 }
