--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "scripts": {
     "dev": "yarn generate && next dev -p 9000",
     "build": "next build",
+    "e2e": "playwright test",
+    "e2e:debug": "playwright test --headed --debug",
     "start": "next start -p 9001",
     "lint": "next lint",
     "test": "jest",
@@ -52,11 +54,12 @@
     "use-mailchimp-form": "^3.1.0"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^3.3.0",
+    "@graphql-codegen/cli": "^5.0.7",
     "@graphql-codegen/typed-document-node": "^4.0.0",
     "@graphql-codegen/typescript": "^3.0.3",
     "@graphql-codegen/typescript-operations": "^3.0.3",
     "@graphql-codegen/typescript-react-query": "^4.1.0",
+    "@playwright/test": "^1.51.0",
     "@testing-library/dom": "^10.3.1",
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
@@ -66,7 +69,7 @@
     "autoprefixer": "10.4.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "postcss": "8.4.14",
+    "postcss": "^8.5.6",
     "sass": "^1.62.0",
     "tailwindcss": "^3.0.24",
     "ts-node": "^10.9.2"
